# shotwell

./: README.md  makefile
.semaphore/: semaphore.yml
plugins/authenticator/shotwell/: FlickrPublishingAuthenticator.vala  GoogleAuthenticator.vala  OAuth1Authenticator.vala  TumblrAuthenticator.vala
plugins/common/: OAuth1Support.vala  RESTSupport.vala  Resources.vala
plugins/shotwell-publishing/: FlickrPublishing.vala  PhotosPublisher.vala  PiwigoPublishing.vala  TumblrPublishing.vala  YouTubePublishing.vala  shotwell-publishing.vala
plugins/shotwell-publishing-extras/: GalleryConnector.vala  RajcePublishing.vala  YandexPublishing.vala  shotwell-publishing-extras.vala
plugins/shotwell-transitions/: BlindsEffect.vala  ChessEffect.vala  CircleEffect.vala  CirclesEffect.vala  ClockEffect.vala  CrumbleEffect.vala  FadeEffect.vala  SlideEffect.vala  SquaresEffect.vala  StripesEffect.vala  shotwell-transitions.vala
src/: AppDirs.vala  AppWindow.vala  Application.vala  BackgroundImportJob.vala  BatchImport.vala  BatchImportJob.vala  BatchImportResult.vala  BatchImportRoll.vala  Box.vala  CheckerboardItem.vala  CheckerboardItemText.vala  CheckerboardLayout.vala  CheckerboardPage.vala  CollectionPage.vala  ColorTransformation.vala  CommandManager.vala  Commands.vala  CompletedImportObject.vala  Debug.vala  DesktopIntegration.vala  Dialogs.vala  Dimensions.vala  DirectoryMonitor.vala  DuplicatedFile.vala  Event.vala  Exporter.vala  FileToPrepare.vala  ImportManifest.vala  ImportResult.vala  LibraryFiles.vala  LibraryMonitor.vala  MediaDataRepresentation.vala  MediaInterfaces.vala  MediaMetadata.vala  MediaMonitor.vala  MediaPage.vala  MediaViewTracker.vala  MetadataWriter.vala  NaturalCollate.vala  Orientation.vala  (+29 more)
src/.unitize/: _UnitInternals.vala
src/camera/: CameraBranch.vala  CameraTable.vala  DiscoveredCamera.vala  GPhoto.vala  ImportPage.vala
src/config/: Config.vala  ConfigurationInterfaces.vala  GSettingsEngine.vala
src/core/: Alteration.vala  ContainerSourceCollection.vala  DataCollection.vala  DataObject.vala  DataSet.vala  DataSource.vala  DataSourceTypes.vala  DataView.vala  DataViewTypes.vala  DatabaseSourceCollection.vala  SourceCollection.vala  SourceHoldingTank.vala  SourceInterfaces.vala  Tracker.vala  ViewCollection.vala  util.vala
src/data_imports/: DataImportJob.vala  DataImportSource.vala  DataImports.vala  DataImportsPluginHost.vala  DataImportsUI.vala
src/db/: DatabaseTable.vala  Db.vala  EventTable.vala  FaceLocationTable.vala  FaceTable.vala  PhotoTable.vala  SavedSearchDBTable.vala  TagTable.vala  TombstoneTable.vala  VersionTable.vala  VideoTable.vala
src/direct/: Direct.vala  DirectPhoto.vala  DirectPhotoPage.vala  DirectView.vala  DirectWindow.vala
src/editing_tools/: EditingTools.vala  RGBHistogramManipulator.vala  StraightenTool.vala
src/events/: EventDirectoryItem.vala  EventPage.vala  EventsBranch.vala  EventsDirectoryPage.vala
src/faces/: Face.vala  FaceDetect.vala  FaceLocation.vala  FacePage.vala  FaceShape.vala  FacesBranch.vala  FacesTool.vala
src/folders/: FoldersBranch.vala  FoldersPage.vala
src/import-roll/: ImportRollEntry.vala
src/photos/: BmpSupport.vala  GRaw.vala  GdkSupport.vala  JfifSupport.vala  PhotoFileAdapter.vala  PhotoFileFormat.vala  PhotoFileSniffer.vala  PhotoMetadata.vala  PngSupport.vala  RawSupport.vala  TiffSupport.vala
src/plugins/: DataImportsInterfaces.vala  ManifestWidget.vala  Plugins.vala  PublishingInterfaces.vala  SpitInterfaces.vala  StandardHostInterface.vala  TransitionsInterfaces.vala
src/publishing/: APIGlue.vala  Publishing.vala  PublishingPluginHost.vala  PublishingUI.vala  StaticMessagePaneWidget.vala  SuccessPaneWidget.vala
src/searches/: SavedSearchDialog.vala  SavedSearchPage.vala  SearchBoolean.vala  SearchesBranch.vala
src/sidebar/: Branch.vala  Entry.vala  Tree.vala  common.vala
src/slideshow/: Slideshow.vala  TransitionEffects.vala
src/tags/: HierarchicalTagIndex.vala  HierarchicalTagUtilities.vala  TagPage.vala  TagsBranch.vala
src/threads/: BackgroundJob.vala  Semaphore.vala  Threads.vala  Workers.vala
src/unit/: Unit.vala
src/util/: KeyValueMap.vala  Util.vala  file.vala  image.vala  misc.vala  string.vala  ui.vala
thumbnailer/: shotwell-video-thumbnailer.vala
