subdir('plugins')

sw_graphics_processor = static_library('shotwell-graphics-processor',
               ['ColorTransformation.vala',
                'util/KeyValueMap.vala',
                '_transformation.c'],
               vala_header : 'shotwell-graphics-processor.h',
               vala_vapi : 'shotwell-graphics-processor.vapi',
               dependencies : [gio, gee, gdk],
               include_directories : config_incdir,
               c_args : '-DG_DISABLE_CAST_CHECKS',
               vala_args : '--disable-assert',
               install : false)

processor = executable('shotwell-graphics-processor',
                       ['graphics-processor.vala'],
                       dependencies: [gio, gdk, gee],
                       link_with: sw_graphics_processor)

shotwell_deps = [gio, gee, sqlite, gtk, sqlite, posix, gphoto2,
                 gstreamer_pbu, gio_unix, gudev, gexiv2, gmodule,
                 libraw, libexif, sw_plugin]

shotwell_libs = [sw_graphics_processor]

face_sources = []
face_obj = ''

if get_option('face-detection')
  face_sources = (['faces/FacesBranch.vala',
                     'faces/FacePage.vala',
                     'faces/FaceShape.vala',
                     'faces/FaceDetect.vala',
                     'faces/Faces.vala',
                     'faces/FacesTool.vala'])
endif

shotwell_deps = [gio, gee, sqlite, gtk, sqlite, posix, gphoto2,
                 gstreamer_pbu, gio_unix, gudev, gexiv2, gmodule,
                 libraw, libexif, sw_plugin, webpdemux, webp, version,
                 clutter, clutter_gtk, champlain, champlain_gtk]

if unity_available
    shotwell_deps += [unity]
endif

subdir('publishing')

executable('shotwell', [
    'AppDirs.vala',
    'PreparedFileCluster.vala',
    'PreparedFileImportJob.vala',
    'Application.vala',
    'AppWindow.vala',
    'BackgroundImportJob.vala',
    'BatchImportResult.vala',
    'BatchImportJob.vala',
    'BatchImportRoll.vala',
    'BatchImport.vala',
    'Box.vala',
    'CheckerboardItemText.vala',
    'CheckerboardItem.vala',
    'CheckerboardLayout.vala',
    'CheckerboardPage.vala',
    'CollectionPage.vala',
    'CommandManager.vala',
    'Commands.vala',
    'CompletedImportObject.vala',
    'Debug.vala',
    'DesktopIntegration.vala',
    'Dialogs.vala',
    'Dimensions.vala',
    'DirectoryMonitor.vala',
    'DragAndDropHandler.vala',
    'DuplicatedFile.vala',
    'Event.vala',
    'Exporter.vala',
    'FileToPrepare.vala',
    'ImportManifest.vala',
    'ImportResult.vala',
    'International.vala',
    'LibraryFiles.vala',
    'LibraryMonitor.vala',
    'main.vala',
    'MapWidget.vala',
    'MediaDataRepresentation.vala',
    'MediaInterfaces.vala',
    'MediaMetadata.vala',
    'MediaMonitor.vala',
    'MediaPage.vala',
    'MediaViewTracker.vala',
    'MetadataWriter.vala',
    'NaturalCollate.vala',
    'Orientation.vala',
    'PageMessagePane.vala',
    'Page.vala',
    'PhotoMonitor.vala',
    'PhotoPage.vala',
    'Photo.vala',
    'PixbufCache.vala',
    'PreparedFile.vala',
    'Printing.vala',
    'Profiles.vala',
    'Properties.vala',
    'ReadyForImport.vala',
    'Resources.vala',
    'Screensaver.vala',
    'SearchFilter.vala',
    'SinglePhotoPage.vala',
    'SlideshowPage.vala',
    'SortedList.vala',
    'Tag.vala',
    'ThumbnailCache.vala',
    'Thumbnail.vala',
    'TimedQueue.vala',
    'Tombstone.vala',
    'UnityProgressBar.vala',
    'Upgrades.vala',
    'VideoMetadata.vala',
    'VideoMonitor.vala',
    'VideoSupport.vala',
] + [
    'camera/CameraBranch.vala',
    'camera/CameraTable.vala',
    'camera/Camera.vala',
    'camera/DiscoveredCamera.vala',
    'camera/GPhoto.vala',
    'camera/ImportPage.vala',
    'config/ConfigurationInterfaces.vala',
    'config/Config.vala',
    'config/GSettingsEngine.vala',
    'core/Alteration.vala',
    'core/ContainerSourceCollection.vala',
    'core/Core.vala',
    'core/DatabaseSourceCollection.vala',
    'core/DataCollection.vala',
    'core/DataObject.vala',
    'core/DataSet.vala',
    'core/DataSourceTypes.vala',
    'core/DataSource.vala',
    'core/DataViewTypes.vala',
    'core/DataView.vala',
    'core/SourceCollection.vala',
    'core/SourceHoldingTank.vala',
    'core/SourceInterfaces.vala',
    'core/Tracker.vala',
    'core/util.vala',
    'core/ViewCollection.vala',
    'data_imports/DataImportJob.vala',
    'data_imports/DataImportSource.vala',
    'data_imports/DataImportsPluginHost.vala',
    'data_imports/DataImportsUI.vala',
    'data_imports/DataImports.vala',
    'db/DatabaseTable.vala',
    'db/Db.vala',
    'db/EventTable.vala',
    'db/FaceLocationTable.vala',
    'db/FaceTable.vala',
    'db/PhotoTable.vala',
    'db/SavedSearchDBTable.vala',
    'db/TagTable.vala',
    'db/TombstoneTable.vala',
    'db/VersionTable.vala',
    'db/VideoTable.vala',
    'dialogs/AdjustDateTimeDialog.vala',
    'dialogs/EntryMultiCompletion.vala',
    'dialogs/ExportDialog.vala',
    'dialogs/MultiTextEntryDialog.vala',
    'dialogs/Preferences.vala',
    'dialogs/ProgressDialog.vala',
    'dialogs/SetBackgroundSlideshow.vala',
    'dialogs/SetBackground.vala',
    'dialogs/TextEntry.vala',
    'dialogs/WelcomeDialog.vala',
    'direct/DirectPhotoPage.vala',
    'direct/DirectPhoto.vala',
    'direct/Direct.vala',
    'direct/DirectView.vala',
    'direct/DirectWindow.vala',
    'editing_tools/EditingTools.vala',
    'editing_tools/RGBHistogramManipulator.vala',
    'editing_tools/StraightenTool.vala',
    'events/EventDirectoryItem.vala',
    'events/EventPage.vala',
    'events/EventsBranch.vala',
    'events/EventsDirectoryPage.vala',
    'events/Events.vala',
    'faces/FaceLocation.vala',
    'faces/Face.vala',
    'folders/FoldersBranch.vala',
    'folders/FoldersPage.vala',
    'folders/Folders.vala',
    'import-roll/ImportRollBranch.vala',
    'import-roll/ImportRollEntry.vala',
    'library/FlaggedPage.vala',
    'library/FlaggedSidebarEntry.vala',
    'library/ImportQueuePage.vala',
    'library/ImportQueueSidebarEntry.vala',
    'library/LastImportPage.vala',
    'library/LastImportSidebarEntry.vala',
    'library/LibraryBranch.vala',
    'library/Library.vala',
    'library/LibraryWindow.vala',
    'library/OfflinePage.vala',
    'library/OfflineSidebarEntry.vala',
    'library/TrashPage.vala',
    'library/TrashSidebarEntry.vala',
    'photos/BmpSupport.vala',
    'photos/GdkSupport.vala',
    'photos/GifSupport.vala',
    'photos/GRaw.vala',
    'photos/JfifSupport.vala',
    'photos/PhotoFileAdapter.vala',
    'photos/PhotoFileFormat.vala',
    'photos/PhotoFileSniffer.vala',
    'photos/PhotoMetadata.vala',
    'photos/Photos.vala',
    'photos/PngSupport.vala',
    'photos/RawSupport.vala',
    'photos/TiffSupport.vala',
    'photos/WebPSupport.vala',
    'plugins/ManifestWidget.vala',
    'plugins/Plugins.vala',
    'plugins/StandardHostInterface.vala',
    'publishing/APIGlue.vala',
    'publishing/PublishingPluginHost.vala',
    'publishing/PublishingUI.vala',
    'publishing/Publishing.vala',
    'searches/SavedSearchDialog.vala',
    'searches/SavedSearchPage.vala',
    'searches/SearchBoolean.vala',
    'searches/SearchesBranch.vala',
    'searches/Searches.vala',
    'sidebar/Branch.vala',
    'sidebar/common.vala',
    'sidebar/Entry.vala',
    'sidebar/Sidebar.vala',
    'sidebar/Tree.vala',
    'slideshow/Slideshow.vala',
    'slideshow/TransitionEffects.vala',
    'tags/HierarchicalTagIndex.vala',
    'tags/HierarchicalTagUtilities.vala',
    'tags/TagPage.vala',
    'tags/TagsBranch.vala',
    'tags/Tags.vala',
    'threads/BackgroundJob.vala',
    'threads/Semaphore.vala',
    'threads/Threads.vala',
    'threads/Workers.vala',
    'unit/Unit.vala',
    'util/file.vala',
    'util/image.vala',
    'util/misc.vala',
    'util/string.vala',
    'util/system.vala',
    'util/ui.vala',
    'util/Util.vala',
    '.unitize/_UnitInternals.vala',
    '.unitize/_UtilInternals.vala',
    '.unitize/_ThreadsInternals.vala',
    '.unitize/_DbInternals.vala',
    '.unitize/_EditingToolsInternals.vala',
    '.unitize/_PluginsInternals.vala',
    '.unitize/_SlideshowInternals.vala',
    '.unitize/_PhotosInternals.vala',
    '.unitize/_PublishingInternals.vala',
    '.unitize/_LibraryInternals.vala',
    '.unitize/_DirectInternals.vala',
    '.unitize/_CoreInternals.vala',
    '.unitize/_SidebarInternals.vala',
    '.unitize/_EventsInternals.vala',
    '.unitize/_TagsInternals.vala',
    '.unitize/_CameraInternals.vala',
    '.unitize/_SearchesInternals.vala',
    '.unitize/_ConfigInternals.vala',
    '.unitize/_DataImportsInternals.vala',
    '.unitize/_FoldersInternals.vala',
    '.unitize/_Library_unitize_entry.vala',
    '.unitize/_Direct_unitize_entry.vala',
] + shotwell_resources + face_sources,
           include_directories : vapi_incdir,
           dependencies : [
               shotwell_deps,
               sw_publishing_gui
           ],
           vala_args : ['--pkg', 'libgphoto2',
                        '--pkg', 'libraw',
                        '--pkg', 'libexif',
                        '--pkg', 'version',
                        '--gresources',
                        join_paths(meson.source_root(), 'data',
                          'org.gnome.Shotwell.gresource.xml')
                       ],
           link_with: [
               sw_graphics_processor
           ],
           install : true)
